...
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:text="@string/sign_up"
      android:textAlignment="center"
      android:textSize="25sp"
      android:textColor="@color/salmon"
      app:layout_constraintBottom_toTopOf="@id/signupContainer"/>

  <LinearLayout
      android:id="@+id/signupContainer"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
...
